Closed Bug 1152016 Opened 10 years ago Closed 10 years ago

Suppress MJPEG fprintf() warnings in libyuv

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox37 --- wontfix
firefox38 --- fixed
firefox38.0.5 --- fixed
firefox39 --- fixed
firefox40 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

(Whiteboard: [webrtc-uplift])

Attachments

(1 file)

jpeg-turbo by default dumps warnings to stderr (including warnings about extraneous bytes, which happen All The Time in MJPEG data). We really don't want to dump this all to stderr by default
Pretty trivial patch to leverage the ability to redefine warning output for jpeg
Attachment #8589259 - Flags: review?(pkerr)
Attachment #8589259 - Flags: review?(pkerr) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment on attachment 8589259 [details] [diff] [review] suppress fprintf(stderr)'s from jpeg in MJPEG decode Approval Request Comment See bug 1151628's request
Attachment #8589259 - Flags: approval-mozilla-beta?
Attachment #8589259 - Flags: approval-mozilla-aurora?
Blocks: 880419
No longer blocks: 880149
Comment on attachment 8589259 [details] [diff] [review] suppress fprintf(stderr)'s from jpeg in MJPEG decode I'm approving this prereq for bug 1151628 for Aurora. As we're up to Beta 7, I'm going to leave the call for Beta up to Sylvestre.
Attachment #8589259 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment on attachment 8589259 [details] [diff] [review] suppress fprintf(stderr)'s from jpeg in MJPEG decode [Triage Comment] Let's take it as it is needed for bug 1151628
Attachment #8589259 - Flags: approval-mozilla-beta? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: